# pyweb-hw-10

./: README.md  pyproject.toml
quotes/quoteapp/: forms.py  models.py  seed.py  seed_mongo.py  urls.py  views.py
quotes/quoteapp/templates/quoteapp/: author.html  base.html  index.html  quote.html  quotes.html
quotes/quoteapp/templatetags/: extract_tags.py
quotes/quotes/: settings.py
quotes/users/: forms.py  models.py  views.py
quotes/users/templates/users/: profile.html  signup.html
