[tool.poetry]
name = "pyweb-hw-10"
version = "0.1.0"
description = "Implementation of a site analogue on Django"
authors = ["Vitalii Savenko <vitaly.savenko12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
Django = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
